Implemented Glide to load image resource into viewholder--introduced a 'drawable' to be used as placeholder

--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -10,6 +10,13 @@
         android:layout_height="164dp"
         tools:srcCompat="@tools:sample/avatars" />
 
+    //Placeholder
+    <ImageView
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:src="@drawable/poster_placeholder" />
+
+
     <TextView
         android:id="@+id/itemTitle"
         android:layout_width="256dp"
