Added alternative resources using qualifiers to display different layout in landscape orientation

--- a/app/src/main/res/layout-land/movie_item.xml
+++ b/app/src/main/res/layout-land/movie_item.xml
@@ -7,10 +7,10 @@
 
     <ImageView
         android:id="@+id/itemPoster"
-        android:layout_width="148.5dp"
-        android:layout_height="220dp"
+        android:layout_width="208dp"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="15dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
@@ -27,17 +27,17 @@
         android:textSize="24sp" />
 
     <TextView
-        android:layout_marginTop="10dp"
         android:id="@+id/itemOverview"
-        android:layout_width="248dp"
-        android:layout_height="163dp"
+        android:layout_width="581dp"
+        android:layout_height="72dp"
         android:layout_below="@+id/itemTitle"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_toEndOf="@id/itemPoster"
         android:layout_marginBottom="10dp"
+        android:layout_toEndOf="@id/itemPoster"
         android:text="After the invasion of Japan by the Brittannian Empire, the country is renamed to Area 11. The young Lelouch, a Brittannian student living in Japan, accidentally gets caught up in a local terrorist attack against Brittannia, reuniting with his childhood friend Suzaku as well as meeting the mysterious girl C.C. Cornered in a life and death situation, Lelouch accepts a power C.C. offers to him, the ability to order anyone to do anything."
-        android:textSize="14sp" />
+        android:textSize="12sp" />
 
 </RelativeLayout>
