--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -7,10 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".MovieDetailsActivity">
 
+    <!--TODO: Make image flush against toolbar. Add black bars for uncommon aspect ratios-->
     <ImageView
-        android:id="@+id/itemMedia"
+
+        android:id="@+id/movieMedia"
         android:layout_width="match_parent"
-        android:layout_height="275dp"
+        android:layout_height="234dp"
         android:layout_alignParentTop="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
@@ -19,28 +21,123 @@
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <TextView
-        android:id="@+id/itemTitle"
+        android:id="@+id/movieTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:text="Code Geass: Lelouch of the Rebellion"
-        android:layout_below="@id/itemMedia"
+        android:layout_below="@id/movieMedia"
         android:textSize="24dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/itemOverview"
+    <RelativeLayout
+        android:id="@+id/detailsContainer"
         android:layout_width="match_parent"
-        android:layout_height="163dp"
-        android:layout_below="@+id/itemTitle"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dateContainer"
+        android:layout_alignStart="@id/movieTitle"
+        android:layout_alignEnd="@id/movieTitle"
+        android:layout_marginTop="10dp"
+        tools:context=".MovieDetailsActivity">
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="5dp"
+            android:isIndicator="true"
+            android:numStars="5"
+            android:rating="0" />
+
+        <TextView
+            android:id="@+id/voteCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/ratingBar"
+            android:text="24,500"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/popularityText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="Popularity:"
+            android:textSize="18dp"
+            android:layout_toEndOf="@+id/voteCount"
+
+            android:layout_marginStart="50dp"
+            android:textStyle="bold" />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:id="@+id/popularityBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_toEndOf="@+id/popularityText"
+            android:layout_marginStart="10dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:isIndicator="true" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/dateContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/movieTitle"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp">
+
+        <TextView
+            android:id="@+id/releaseDateText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14dp"
+            android:text="Release Date: " />
+
+        <TextView
+            android:id="@+id/releaseDateNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/releaseDateText"
+            android:textSize="14dp"
+            android:text="06/25/2020" />
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/synopsisText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/detailsContainer"
+        android:layout_marginTop="10dp"
+        android:textSize="14dp"
+        android:text="Synopsis"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/movieOverview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/synopsisText"
         android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         android:text="After the invasion of Japan by the Brittannian Empire, the country is renamed to Area 11. The young Lelouch, a Brittannian student living in Japan, accidentally gets caught up in a local terrorist attack against Brittannia, reuniting with his childhood friend Suzaku as well as meeting the mysterious girl C.C. Cornered in a life and death situation, Lelouch accepts a power C.C. offers to him, the ability to order anyone to do anything."
         android:textSize="14sp" />
+
 </RelativeLayout>
