Fixed issues affect xml layout and proper data binding with the adapter

--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -26,7 +26,9 @@
         android:layout_toEndOf="@id/itemPoster"
         android:text="Code Geass: Lelouch of the Rebellion"
         android:textSize="24sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:maxLines="1"
+        android:ellipsize="end"/>
 
     <TextView
         android:layout_marginTop="10dp"
