--- a/app/src/main/res/layout-land/movie_item.xml
+++ b/app/src/main/res/layout-land/movie_item.xml
@@ -25,7 +25,9 @@
         android:layout_marginEnd="10dp"
         android:layout_toEndOf="@id/itemPoster"
         android:text="Code Geass: Lelouch of the Rebellion"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:maxLines="1"
+        android:ellipsize="end"/>
 
     <TextView
         android:id="@+id/itemOverview"
@@ -38,6 +40,8 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:layout_toEndOf="@id/itemPoster"
+        android:maxLines="8"
+        android:ellipsize="end"
         android:text="After the invasion of Japan by the Brittannian Empire, the country is renamed to Area 11. The young Lelouch, a Brittannian student living in Japan, accidentally gets caught up in a local terrorist attack against Brittannia, reuniting with his childhood friend Suzaku as well as meeting the mysterious girl C.C. Cornered in a life and death situation, Lelouch accepts a power C.C. offers to him, the ability to order anyone to do anything. Test#################################################################################################################################################################################################################################################################################################################################"
         android:textSize="12sp" />
 </RelativeLayout>
