--- a/app/src/main/res/layout-land/activity_movie_details.xml
+++ b/app/src/main/res/layout-land/activity_movie_details.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".MovieDetailsActivity">
 
-    <ScrollView
+
+<ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
 
@@ -18,9 +19,9 @@
 
             <!--TODO: Make image flush against toolbar.-->
             <RelativeLayout
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
                 android:id="@+id/mediaContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@color/colorEmpty">
 
                 <ImageView
@@ -28,7 +29,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="234dp"
                     android:layout_alignParentTop="true"
-                    android:layout_marginTop="2dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.333"
                     app:layout_constraintStart_toStartOf="parent"
@@ -36,16 +36,16 @@
                     tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                 <ImageButton
-                    android:clickable="false"
                     android:id="@+id/playButton"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:layout_width="100dp"
                     android:adjustViewBounds="true"
-                    android:layout_height="wrap_content"
-                    android:scaleType="fitXY"
                     android:background="@null"
-                    android:elevation="10dp"/>
+                    android:clickable="false"
+                    android:elevation="10dp"
+                    android:scaleType="fitXY"/>
 
             </RelativeLayout>
 
@@ -53,13 +53,13 @@
                 android:id="@+id/movieTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
-                android:text="Code Geass: Lelouch of the Rebellion"
                 android:layout_below="@id/mediaContainer"
-                android:textSize="24dp"
+                android:layout_centerHorizontal="true"
                 android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
+                android:text="Code Geass: Lelouch of the Rebellion"
+                android:textSize="24dp"
                 android:textStyle="bold"/>
 
             <RelativeLayout
@@ -99,23 +99,51 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:layout_marginStart="50dp"
+                    android:layout_toEndOf="@+id/voteCount"
                     android:text="Popularity:"
                     android:textSize="18dp"
-                    android:layout_toEndOf="@+id/voteCount"
-
-                    android:layout_marginStart="50dp"
                     android:textStyle="bold" />
 
-                <ProgressBar
+                <RelativeLayout
+                    android:id="@+id/popularityContainer"
                     android:layout_width="wrap_content"
-                    android:id="@+id/popularityBar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_toEndOf="@+id/popularityText"
-                    android:layout_marginStart="10dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:isIndicator="true" />
+                    android:layout_toEndOf="@+id/popularityText">
+
+                    <ProgressBar
+                        android:id="@+id/popularityBar"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="10dp"
+                        android:isIndicator="true"
+                        android:max="150" />
+
+                    <TextView
+                        android:id="@+id/popularityMax"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/popularityBar"
+                        android:layout_marginTop="20dp"
+                        android:layout_toRightOf="@id/popularityScore"
+                        android:text="@string/popularity_max_score"
+                        android:textSize="10sp"/>
+
+                    <TextView
+                        android:id="@+id/popularityScore"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/popularityBar"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="20dp"
+                        android:text="0"
+                        android:textSize="8sp" />
+
+                </RelativeLayout>
 
             </RelativeLayout>
 
@@ -131,16 +159,16 @@
                     android:id="@+id/releaseDateText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14dp"
-                    android:text="Release Date: " />
+                    android:text="Release Date: "
+                    android:textSize="14dp" />
 
                 <TextView
                     android:id="@+id/releaseDateNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/releaseDateText"
-                    android:textSize="14dp"
-                    android:text="06/25/2020" />
+                    android:text="06/25/2020"
+                    android:textSize="14dp" />
             </RelativeLayout>
 
             <TextView
@@ -148,11 +176,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/detailsContainer"
-                android:layout_marginTop="10dp"
-                android:textSize="14dp"
-                android:text="Synopsis"
                 android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
+                android:text="Synopsis"
+                android:textSize="14dp"
                 android:textStyle="bold"/>
 
             <TextView
