Added additional styling to the background of individual movie items and mmovie descriptions; Styling to rating stars and popularity bar now has 4 variations

--- a/app/src/main/res/drawable/red_progress.xml
+++ b/app/src/main/res/drawable/red_progress.xml
@@ -31,8 +31,8 @@
                 <corners android:radius="5dip" />
                 <gradient
                     android:angle="270"
-                    android:endColor="#FF9800"
-                    android:startColor="#FF9800" />
+                    android:endColor="#FF3D00"
+                    android:startColor="#FF3D00" />
             </shape>
         </clip>
     </item>
