--- a/app/src/main/res/drawable/blue_progress.xml
+++ b/app/src/main/res/drawable/blue_progress.xml
@@ -5,7 +5,7 @@
             <corners android:radius="5dip" />
             <gradient
                 android:angle="270"
-                android:centerColor="#757A75"
+                android:centerColor="#5A5D5A"
                 android:centerY="0.75"
                 android:endColor="#5A5D5A"
                 android:startColor="#5A5D5A" />
