--- a/app/src/main/res/drawable/green_progress.xml
+++ b/app/src/main/res/drawable/green_progress.xml
@@ -31,8 +31,8 @@
                 <corners android:radius="5dip" />
                 <gradient
                     android:angle="270"
-                    android:endColor="#FF9800"
-                    android:startColor="#FF9800" />
+                    android:endColor="#4CAF50"
+                    android:startColor="#4CAF50" />
             </shape>
         </clip>
     </item>
