--- a/app/src/main/res/layout-land/activity_movie_details.xml
+++ b/app/src/main/res/layout-land/activity_movie_details.xml
@@ -15,7 +15,8 @@
         <RelativeLayout
             android:id="@+id/form_layout"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/movie_details_background">
 
             <!--TODO: Make image flush against toolbar.-->
             <RelativeLayout
