--- a/app/src/main/res/layout-land/movie_item.xml
+++ b/app/src/main/res/layout-land/movie_item.xml
@@ -4,7 +4,8 @@
     android:id="@+id/movieItemContainer"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/movie_item_background">
 
     <ImageView
         android:id="@+id/itemPoster"
