--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieDetailsActivity">
+    tools:context=".MovieDetailsActivity"
+    android:background="@drawable/movie_details_background">
 
     <!--TODO: Make image flush against toolbar. Add black bars for uncommon aspect ratios-->
 
@@ -72,7 +73,8 @@
             android:layout_marginTop="5dp"
             android:isIndicator="true"
             android:numStars="5"
-            android:rating="0" />
+            android:rating="0"
+            android:theme="@style/RatingBar"/>
 
         <TextView
             android:id="@+id/voteCount"
@@ -111,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:max="150"
+                android:max="200"
                 android:isIndicator="true"/>
 
             <TextView
