--- a/app/src/main/res/layout-land/activity_movie_details.xml
+++ b/app/src/main/res/layout-land/activity_movie_details.xml
@@ -16,7 +16,8 @@
             android:id="@+id/form_layout"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/movie_details_background">
+            android:background="@drawable/movie_details_background"
+            android:paddingBottom="40dp">
 
             <!--TODO: Make image flush against toolbar.-->
             <RelativeLayout
